<resources>
    <string name="app_name">LWorder</string>
    <string name="learn_words">Учить слова</string>
    <string name="base">Мой словарь</string>
    <string name="translated_word">Введите перевод</string>
    <string name="check">Проверить</string>
    <string name="show_translate">Показать\nперевод</string>
    <string name="next_word">Следующее\nслово</string>
    <string name="some_word">Некоторое\nслово</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="rus_eng">родной-изучаемый</string>
    <string name="eng_rus">изучаемый-родной</string>
    <string name="dev">dev:\ntg.me/bootafoga\n2019</string>
    <string name="phrase_today">You live a new life for every new language you speak. \nIf you know only one language, you live only once.</string>

    <string name="learned">Выучено</string>
    <string name="not_learned">Не выучено</string>
    <string name="enterWord">Слово на изучаемом языке</string>
    <string name="enterTranslate">Слово на родном языке</string>
    <string name="OK">Подтвердить</string>

    <string name="pick_action">Выберите действие</string>
    <string name="edit_word">Редактировать запись</string>
    <string name="cancel">Отмена</string>
    <string name="done">Добавлено!</string>
    <string name="incorrect_input">Неправильный ввод</string>
    <string name="attention">Внимание!</string>
    <string name="database_unavailable">База данных недоступна</string>
    <string name="empty_base">Ваш словарь пуст, ничего выведено не будет. Вернитесь на главную страницу и добавьте слова</string>
    <string name="add_word">Добавление слова</string>
    <string name="dictionary">Словарь</string>
    <string name="learn_words">Учить слова</string>


</resources>
