<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TranslateWords">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">


        <TextView
            android:id="@+id/word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:textColor="@color/actionbar_text_color"
            android:text="@string/some_word"
            android:textSize="35sp" />

        <EditText
            android:id="@+id/translate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="26dp"
            android:gravity="center"
            android:hint="@string/translated_word"
            android:textSize="30sp"
            android:layout_marginBottom="20dp"
            android:visibility="visible" />

        <Button
            android:id="@+id/checkTranslate"
            style="@style/ButtonsOnFragmentWords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="48dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="48dp"
            android:text="@string/check"
            android:textColor="@color/buttons_text_color"
            android:background="@drawable/buttons_options"
            android:textSize="24sp"
            android:layout_marginBottom="25dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"

            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/showTranslate"
                    style="@style/ButtonsOnFragmentWords"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:textColor="@color/buttons_text_color"
                    android:background="@drawable/buttons_options"
                    android:text="@string/show_translate" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/nextWord"
                    style="@style/ButtonsOnFragmentWords"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textColor="@color/buttons_text_color"
                    android:background="@drawable/buttons_options"
                    android:layout_weight="1"
                    android:text="@string/next_word" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>
</LinearLayout>