<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/learn_words"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/buttons_main_options"
        android:onClick="OnClickLearnWords"
        android:text="@string/learn_words"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/base"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/buttons_main_options"
        android:text="@string/base"
        android:textSize="17dp"
        android:onClick="openDictionary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/learn_words"
        app:layout_constraintVertical_bias="0.204" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="294dp"
        android:layout_height="134dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:alpha="0.7"
        android:background="@drawable/phrase_background"
        app:layout_constraintBottom_toTopOf="@+id/learn_words"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@android:style/Widget.DeviceDefault.TextView.SpinnerItem"
        android:layout_width="283dp"
        android:layout_height="99dp"
        android:gravity="start"
        android:text="@string/phrase_today"
        android:textAlignment="center"
        android:textColor="@color/phrase_text_color"
        android:textSize="20dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="115dp"
        android:layout_height="63dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/dev"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.972" />

</android.support.constraint.ConstraintLayout>